; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Strsafe.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Strsafe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @Strsafe(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %32

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @Strsafe_find(i8* %10)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %28

14:                                               ; preds = %9
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @lemonStrlen(i8* %15)
  %17 = add nsw i64 %16, 1
  %18 = call i64 @malloc(i64 %17)
  %19 = inttoptr i64 %18 to i8*
  store i8* %19, i8** %5, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %14
  %22 = load i8*, i8** %5, align 8
  %23 = load i8*, i8** %3, align 8
  %24 = call i32 @lemon_strcpy(i8* %22, i8* %23)
  %25 = load i8*, i8** %5, align 8
  store i8* %25, i8** %4, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @Strsafe_insert(i8* %26)
  br label %28

28:                                               ; preds = %21, %14, %9
  %29 = load i8*, i8** %4, align 8
  %30 = call i32 @MemoryCheck(i8* %29)
  %31 = load i8*, i8** %4, align 8
  store i8* %31, i8** %2, align 8
  br label %32

32:                                               ; preds = %28, %8
  %33 = load i8*, i8** %2, align 8
  ret i8* %33
}

declare dso_local i8* @Strsafe_find(i8*) #1

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @lemonStrlen(i8*) #1

declare dso_local i32 @lemon_strcpy(i8*, i8*) #1

declare dso_local i32 @Strsafe_insert(i8*) #1

declare dso_local i32 @MemoryCheck(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
